--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -317,6 +317,7 @@ footer .copyright{
 		transform: translate(0px, 0);
 	}
 
+
 	.main .servicios {
 		padding-top: 300px;
 	}
@@ -336,10 +337,11 @@ footer .copyright{
 }
 
 @media screen and (max-width: 400px) {
-	.main .acerca-de article h3 {
-		font-size: 34px;
-		margin-bottom: 10px;
-	}
+	.main .acerca-de article .foto-logo img{
+        width: 300px;
+        height: 300px;
+        margin-bottom: 10px;   
+    }
 
 	.main .menu article .nombre,
 	.main .menu article .precio {
